--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "kcd-scripts test",
+    "test:unit": "vite-jest --no-cache",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "files": [
+    "dist",
+    "extend-expect.js",
+    "matchers.js"
+  ],
   "dependencies": {
+    "chalk": "^5.2.0",
+    "jest": "^29.5.0",
+    "kcd-scripts": "^13.0.0",
+    "pretty-format": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
